--- a/src/game-ui/GameBoard.scss
+++ b/src/game-ui/GameBoard.scss
@@ -14,7 +14,7 @@
     .tiles {
       flex: 1 1 auto;
       display: inline-grid;
-      grid-template-columns: repeat(9, 24px);
+      grid-template: repeat(9, 24px) / repeat(9, 24px);
       background: silver;
     }
   }
