Center game. Add scale.

--- a/src/game-ui/Layout.module.scss
+++ b/src/game-ui/Layout.module.scss
@@ -5,6 +5,7 @@
   padding: 10px;
   background-color: #bdbdbd;
   border: 3px outset;
+  scale: 150%;
   // border-left: 3px solid #fff;
   // border-top: 3px solid #fff;
 
