--- a/src/game-ui/Cell.module.scss
+++ b/src/game-ui/Cell.module.scss
@@ -1,35 +1,44 @@
+@use '../styles/sprite';
+
 .cell {
-  width: 16px;
-  height: 16px;
+  width: sprite.$cell-asset-w;
+  height: sprite.$cell-asset-h;
   background-image: url('../assets/sprite.png');
 
   &Closed {
-    background-position: 0px -49px;
+    background-position: calc(0 * sprite.$cell-assets-hoffset)
+      sprite.$cell-assets-voffset;
   }
 
   &Open {
-    background-position: -17px -49px;
+    background-position: calc(1 * sprite.$cell-assets-hoffset)
+      sprite.$cell-assets-voffset;
   }
 
   &Marked {
-    background-position: -34px -49px;
+    background-position: calc(2 * sprite.$cell-assets-hoffset)
+      sprite.$cell-assets-voffset;
   }
 
   &MarkedWrongly {
-    background-position: -119px -49px;
+    background-position: calc(7 * sprite.$cell-assets-hoffset)
+      sprite.$cell-assets-voffset;
   }
 
   &Mine {
-    background-position: -85px -49px;
+    background-position: calc(5 * sprite.$cell-assets-hoffset)
+      sprite.$cell-assets-voffset;
   }
 
   &MineExploded {
-    background-position: -102px -49px;
+    background-position: calc(6 * sprite.$cell-assets-hoffset)
+      sprite.$cell-assets-voffset;
   }
 
   @for $i from 1 through 8 {
     &#{$i} {
-      background-position: calc((#{$i} - 1) * -17px) -66px;
+      background-position: calc((#{$i} - 1) * #{sprite.$number-assets-hoffset})
+        sprite.$number-assets-voffset;
     }
   }
 }
