Change background color.

--- a/src/game-ui/menu/RadioButton.module.scss
+++ b/src/game-ui/menu/RadioButton.module.scss
@@ -1,6 +1,6 @@
 p {
   input[type='radio'] {
-    accent-color: #000;
+    accent-color: #6272a4;
   }
 
   label {
@@ -9,7 +9,7 @@ p {
     letter-spacing: 2px;
     text-decoration: none;
     text-transform: uppercase;
-    color: #000;
+    color: #6272a4;
     cursor: pointer;
     border: 3px solid;
     padding: 0.25em 0.5em;
