--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  background-color: #c0c0c0;
+  background-color: #282a36;
 }
 
 code {
