--- a/src/styles/_grid.scss
+++ b/src/styles/_grid.scss
@@ -1,11 +1,11 @@
-// Beginner level grid cell size
+// Beginner level grid size
 $beginner-rows: 9;
 $beginner-cols: 9;
 
-// Intermediate level grid cell size
+// Intermediate level grid size
 $intermediate-rows: 16;
 $intermediate-cols: 16;
 
-// Expert levet grid cell size
+// Expert levet grid size
 $expert-rows: 16;
 $expert-cols: 30;
