Use absolute path.

--- a/src/game-ui/cells-grid/CellsGrid.module.scss
+++ b/src/game-ui/cells-grid/CellsGrid.module.scss
@@ -1,5 +1,5 @@
-@use '../../styles/sprite';
-@use '../../styles/grid';
+@use '~styles/sprite';
+@use '~styles/grid';
 
 .cellsGrid {
   display: inline-grid;
