--- a/src/game-ui/controls/ResetButton.module.scss
+++ b/src/game-ui/controls/ResetButton.module.scss
@@ -5,27 +5,27 @@
   height: sprite.$face-asset-h;
   background-image: url('~assets/sprite.png');
 
-  &Unpressed {
+  &.unpressed {
     background-position: calc(0 * sprite.$face-assets-hoffset)
       sprite.$face-assets-voffset;
   }
 
-  &Pressed {
+  &.pressed {
     background-position: calc(1 * sprite.$face-assets-hoffset)
       sprite.$face-assets-voffset;
   }
 
-  &Whoops {
+  &.whoops {
     background-position: calc(2 * sprite.$face-assets-hoffset)
       sprite.$face-assets-voffset;
   }
 
-  &Win {
+  &.success {
     background-position: calc(3 * sprite.$face-assets-hoffset)
       sprite.$face-assets-voffset;
   }
 
-  &Boom {
+  &.fail {
     background-position: calc(4 * sprite.$face-assets-hoffset)
       sprite.$face-assets-voffset;
   }
