--- a/src/game-ui/menu/RadioButton.module.scss
+++ b/src/game-ui/menu/RadioButton.module.scss
@@ -9,8 +9,8 @@ p {
     cursor: pointer;
     border: 3px solid;
     padding: 0.25em 0.5em;
-    box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px,
-      4px 4px 0px 0px, 5px 5px 0px 0px;
+    box-shadow: 1px 1px 0 0, 2px 2px 0 0, 3px 3px 0 0,
+      4px 4px 0 0, 5px 5px 0 0;
     white-space: nowrap;
 
     input[type='radio'] {
