--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,7 @@ body {
   padding: 0;
 
   height: 100vh;
-  width: 100wh;
+  width: 100%;
 
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
