--- a/src/game-ui/grid/Grid.module.scss
+++ b/src/game-ui/grid/Grid.module.scss
@@ -1,5 +1,5 @@
-@use "../../styles/sprite";
-@use "../../styles/grid";
+@use '../../styles/sprite';
+@use '../../styles/grid';
 
 .grid {
   display: inline-grid;
